# hz

./: .gitignore  BROWSER_MODERNIZATION_PLAN_v3.0.0.md  BROWSER_README.md  CMAKE_BUILD_FIX_README.md  CODE_AUDIT_v4.0.0.md  COMMIT_MESSAGE_v3.0.0.md  COMMIT_READY_REPORT_v2.2.0.md  COMPLETION_STATUS_v1.0.3.md  DEPLOYMENT_SUCCESS_v1.0.5.md  DEPLOYMENT_SUCCESS_v1.0.6.md  DEPLOYMENT_SUCCESS_v2.2.0.md  DEVELOPER_DOCS.md  DOCS_INDEX.md  FINAL_CMAKE_PLUGIN_FIX_v1.0.5.md  FINAL_CMAKE_PLUGIN_FIX_v1.0.6.md  FINAL_CMAKE_PLUGIN_FIX_v1.0.7.md  FINAL_GITHUB_ACTIONS_INSTRUCTIONS.md  FINAL_PROJECT_COMPLETION_v1.0.6.md  FINAL_PROJECT_STATUS_v1.0.4.md  GITHUB_ACTIONS_CMAKE_FIX_v1.0.8.md  HOTFIX_v1.0.4_CMAKE_BUILD_FIX.md  HOTFIX_v1.0.5_COMPLETE_CMAKE_BUILD_FIX.md  HOTFIX_v1.0.5_CRITICAL_CMAKE_COMPLETE.md  HOTFIX_v2.2.1_DEPLOYMENT_SUCCESS.md  HOTFIX_v2.2.1_GITHUB_ACTIONS_FIX.md  HOTFIX_v2.2.2_SIMPLIFIED_TESTS.md  HOTFIX_v3.0.1_DEPLOYMENT_SUCCESS.md  IMPROVEMENTS_REPORT_v2.1.0.md  PORTABLE_VERSION_SUMMARY.md  PRIORITY_FEATURES_IMPLEMENTATION_PLAN.md  PROJECT_COMPLETION_v1.0.5.md  PROJECT_COMPLETION_v2.2.0.md  PROJECT_FINAL_COMPLETION_v2.2.2.md  PUSH_SUCCESS_REPORT_v3.0.0.md  README-UPDATED.md  README-Windows11.md  README.md  README_EN.md  SERVER_INFO.md  TESTING_INSTRUCTIONS_v2.1.0.md  (+28 more)
.github/workflows/: build-fixed.yml  build-windows.yml  build-windows11.yml  build.yml
config/: bookmarks.json  config.yaml
data/: tabs_session.json
docs/: PORTABLE_MODE.md  WINDOWS11_UI_GUIDE.md
lib/: app_constants.dart  logger.dart  main.dart  singbox_manager.dart
logs/: README.md
resources/: bookmarks.json
sing-box/: README.md  config.json
src/: __init__.py  base_api.py  logger.py  main.py  ui.py  ui_modern_fixed.py  ui_modern_v4.py  ui_simple.py  ui_ultra_modern.py  ui_win11.py
src/core/: __init__.py  tab_manager.py
tests/: __init__.py  test_cli.py  test_config.py  test_main.py  test_vpn.py
ultra_modern_browser/: __init__.py  cli.py  config.py  logger.py  tray.py  ui.py  vpn.py
ultra_modern_browser/resources/: __init__.py  modern.html  ultra_modern.html
ultra_modern_browser/ui/: __init__.py  basic.py  modern.py  modern_fixed.py  modern_ultra.py  simple.py
windows/: CMakeLists.txt  CMakeLists.txt.bak  create_plugin_stubs.ps1  fix_generated_plugins.sh  simple_test.cmake  test_cmake.sh  test_plugins.cmake
windows/flutter/: CMakeLists.txt  CMakeLists_fixed.txt  generated_plugin_registrant.cc  generated_plugins.cmake  (+5 more)
windows/flutter/ephemeral/.plugin_symlinks/webview_windows/windows/: CMakeLists.txt
(+8 files in other folders)
